cambio de tamaño logo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light  nav__menu--color scrolling-navbar fixed-top ">
       <div class="container-lg">
           <h1 class="nav__logo">
-            <a class="nav__logo" href="index.html"><img src="multimedia/BC2.svg" class="img-fluid animated zoomIn" alt=""></a>
+            <a class="nav__logo" href="index.html"><img src="multimedia/logo__nav.png" class="img-fluid animated zoomIn" alt=""></a>
           </h1>
           <button class="navbar-toggler nav__boton" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon "></span>
@@ -199,7 +199,7 @@
             </div>
 
             <div class="col-12 col-md-7 carousel__logo img-fluid w-100 " >
-                <img src="multimedia/BC2.svg" alt="" class="">
+                <img src="multimedia/bandalos__chinos--logo.png" alt="" class="">
             </div>
 
            
