--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
                       <div class="carousel-inner carousel-home data-interval="5000">
                         <div class="carousel-item active " data-interval="5000" touch="true">
-                            <img src="multimedia/retrato10.svg" class="img-fluid w-100 seccion__carousel--foto" alt="">
+                            <img src="multimedia/carousel-foto-1.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="">
                         </div>
                         <div class="carousel-item " data-interval="5000" touch="true">
                           <img src="multimedia/retrato5.svg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
