--- a/index.html
+++ b/index.html
@@ -176,23 +176,34 @@
                             <img src="multimedia/carousel-foto-1.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="">
                         </div>
                         <div class="carousel-item " data-interval="5000" touch="true">
-                          <img src="multimedia/retrato5.svg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
+                          <img src="multimedia/carousel-foto-2.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
                         <div class="carousel-item "data-interval="5000" touch="true">
-                          <img src="multimedia/retrato4.svg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
+                          <img src="multimedia/carousel-foto-3.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item" data-interval="5000" touch="true" >
-                          <img src="multimedia/retrato8.svg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
+                        <div class="carousel-item "data-interval="5000" touch="true">
+                          <img src="multimedia/carousel-foto-4.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item " data-interval="5000" touch="true">
-                          <img src="multimedia/retrato9.svg" class=" img-fluid w-100 seccion__carousel--foto" alt="...">
+                        <div class="carousel-item "data-interval="5000" touch="true">
+                          <img src="multimedia/carousel-foto-5.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item " data-interval="5000" touch="true">
-                          <img src="multimedia/retrato7.svg" class=" img-fluid w-100 seccion__carousel--foto" alt="...">
+                        <div class="carousel-item "data-interval="5000" touch="true">
+                          <img src="multimedia/carousel-foto-6.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item" data-interval="5000" touch="true">
-                          <img src="multimedia/retrato6.svg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
+                        <div class="carousel-item "data-interval="5000" touch="true">
+                          <img src="multimedia/carousel-foto-7.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
+                        <div class="carousel-item "data-interval="5000" touch="true">
+                          <img src="multimedia/carousel-foto-8.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
+                        </div>
+                        <div class="carousel-item "data-interval="5000" touch="true">
+                          <img src="multimedia/carousel-foto-9.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
+                        </div>
+                        <div class="carousel-item "data-interval="5000" touch="true">
+                          <img src="multimedia/carousel-foto-10.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
+                        </div>
+                        
+                        
                       </div>
                   <!-- </div> -->
                 </div>
