correccion de disco 2

--- a/musica.html
+++ b/musica.html
@@ -143,7 +143,7 @@
                       </div>
 
                       <!-- Card body -->
-                      <div id="collapse1" class="collapse show" role="tabpanel" aria-labelledby="heading1"
+                      <div id="collapse1" class="collapse " role="tabpanel" aria-labelledby="heading1"
                         data-parent="#accordionEx7">
                         <div class="card-body mb-1 rgba-grey-light white-text">
                           <p>
@@ -858,9 +858,9 @@
                 <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading1">
-                    <a data-toggle="collapse" data-parent="#accordionEx7" href="#collapse1" aria-expanded="true"
-                      aria-controls="collapse1">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading1-2">
+                    <a data-toggle="collapse" data-parent="#accordionEx7" href="#collapse1-2" aria-expanded="true"
+                      aria-controls="collapse1-2">
                        
                         <h5 class="mb-0 white-text text-uppercase font-thin card__letra__titulo">
                           Un día<i class="fas fa-angle-down rotate-icon letra__icono--estilos"></i>
@@ -870,7 +870,7 @@
                   </div>
 
                   <!-- Card body -->
-                  <div id="collapse1" class="collapse" role="tabpanel" aria-labelledby="heading1"
+                  <div id="collapse1-2" class="collapse" role="tabpanel" aria-labelledby="heading1-2"
                     data-parent="#accordionEx7">
                     <div class="card-body mb-1 rgba-grey-light white-text">
                       <p>Ey no te apures <br>
@@ -917,9 +917,9 @@
                 <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading2">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse2"
-                      aria-expanded="false" aria-controls="collapse2">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading2-2">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse2-2"
+                      aria-expanded="false" aria-controls="collapse2-2">
                       <h5 class="mb-0 white-text text-uppercase font-thin card__letra__titulo">
                         Isla<i class="fas fa-angle-down rotate-icon"></i>
                       </h5>
@@ -927,7 +927,7 @@
                   </div>
 
                   <!-- Card body -->
-                  <div id="collapse2" class="collapse" role="tabpanel" aria-labelledby="heading2"
+                  <div id="collapse2-2" class="collapse" role="tabpanel" aria-labelledby="heading2-2"
                     data-parent="#accordionEx7">
                     <div class="card-body mb-1 rgba-grey-light white-text">
                       <p>
@@ -987,9 +987,9 @@
                 <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading3">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse3"
-                      aria-expanded="false" aria-controls="collapse3">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading3-2">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse3-2"
+                      aria-expanded="false" aria-controls="collapse3-2">
                       <h5 class="mb-0 white-text text-uppercase font-thin card__letra__titulo">
                         Veccar<i class="fas fa-angle-down rotate-icon"></i>
                       </h5>
@@ -997,7 +997,7 @@
                   </div>
 
                   <!-- Card body -->
-                  <div id="collapse3" class="collapse" role="tabpanel" aria-labelledby="heading3"
+                  <div id="collapse3-2" class="collapse" role="tabpanel" aria-labelledby="heading3-2"
                     data-parent="#accordionEx7">
                     <div class="card-body mb-1 rgba-grey-light white-text">
                       <p>
@@ -1039,9 +1039,9 @@
                 <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading4">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse4"
-                      aria-expanded="false" aria-controls="collapse4">
+                  <div class="card-header rgba-stylish-strong z-depth-1 mb-2 titulo__cancion--estilos" role="tab" id="heading4-2">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse4-2"
+                      aria-expanded="false" aria-controls="collapse4-2">
                       <h5 class="mb-0 white-text text-uppercase font-thin card__letra__titulo">
                         El verano <i class="fas fa-angle-down rotate-icon"></i>
                       </h5>
@@ -1049,7 +1049,7 @@
                   </div>
 
                   <!-- Card body -->
-                  <div id="collapse4" class="collapse" role="tabpanel" aria-labelledby="heading4"
+                  <div id="collapse4-2" class="collapse" role="tabpanel" aria-labelledby="heading4-2"
                     data-parent="#accordionEx7">
                     <div class="card-body mb-1 rgba-grey-light white-text">
                       <p>
@@ -1106,9 +1106,9 @@
                 <div class="card">
 
                   <!-- Card header -->
-                  <div class="card-header rgba-stylish-strong z-depth-1  titulo__cancion--estilos" role="tab" id="heading5">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse5"
-                      aria-expanded="false" aria-controls="collapse5">
+                  <div class="card-header rgba-stylish-strong z-depth-1  titulo__cancion--estilos" role="tab" id="heading5-2">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx7" href="#collapse5-2"
+                      aria-expanded="false" aria-controls="collapse5-2">
                       <h5 class="mb-0 white-text text-uppercase font-thin card__letra__titulo">
                         Dije tu nombre <i class="fas fa-angle-down rotate-icon"></i>
                       </h5>
@@ -1116,7 +1116,7 @@
                   </div>
 
                   <!-- Card body -->
-                  <div id="collapse5" class="collapse" role="tabpanel" aria-labelledby="heading3"
+                  <div id="collapse5-2" class="collapse" role="tabpanel" aria-labelledby="heading5-2"
                     data-parent="#accordionEx7">
                     <div class="card-body mb-1 rgba-grey-light white-text">
                       <p>
