completado de seccion videoclips

--- a/bandalos.html
+++ b/bandalos.html
@@ -49,7 +49,7 @@
                 <a class="nav-link nav__items--estilos" href="musica.html">Música</a>
                 </li>
                 <li class="nav-item mr-4">
-                    <a class="nav-link nav__items--estilos" href="fechas.html">Fechas</a>
+                    <a class="nav-link nav__items--estilos" href="videos.html">Videoclips</a>
                 </li>
                 <li class="nav-item mr-4">
                     <a class="nav-link nav__items--estilos" href="noticias.html">Noticias</a>
@@ -110,10 +110,10 @@
         
         <div class="seccion__bandalos__botones">
             <a href="musica.html">
-                <button type="button" class="btn  bandalos__botones--estilos wow zoomIn ">Videoclips</button>
-            </a>
-            <a href="musica.html">
                 <button type="button" class="btn  bandalos__botones--estilos wow zoomIn">Discografía</button>
+            </a>
+            <a href="videos.html">
+                <button type="button" class="btn  bandalos__botones--estilos wow zoomIn ">Videoclips</button>
             </a>
         </div>
         
