--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="nav-link nav__items--estilos" href="musica.html">Música</a>
               </li>
               <li class="nav-item mr-4">
-                  <a class="nav-link nav__items--estilos" href="fechas.html">Fechas</a>
+                  <a class="nav-link nav__items--estilos" href="videos.html">Videoclips</a>
               </li>
               <li class="nav-item mr-4">
                   <a class="nav-link nav__items--estilos" href="noticias.html">Noticias</a>
