correcion sombra logo, nav, seccion musica

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 Sin señal
               </div>
               <div class="sin__señal_subtitulo__boton">
-                <a href="musica.html">
+                <a href="videos.html">
                   <button type="button" class="btn  bandalos__botones--estilos">Videoclips</button>
               </a>
               </div>
