--- a/videos.html
+++ b/videos.html
@@ -25,6 +25,8 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
 
+        <script type="text/javascript" src="scripts.js" ></script>
+        
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
