agregado de video bailando lentos

--- a/videos.html
+++ b/videos.html
@@ -268,6 +268,35 @@
 
                     <div class="col-12 col-md-6 col-lg-4 mb-5 video__carta">
                         <div class="card  reproductor__inicio__img--estilos" >
+                            <a href="" data-toggle="modal" data-target="#modal__lento" class="sin__senal__img--estilos d-flex justify-content-center align-items-center ">
+                              <img src="multimedia/bailando-lento.jpg" class="w-100 videos__portada--estilos" alt="">
+                              <i class="fas fa-play-circle btn-floating reproductor__inicio__boton__play videoclips__boton waves-effect waves-light fa-5x"></i>                             
+                              <h3 class="videoclips__titulo__video">Bailando Lentos</h3>
+                            </a>
+                            
+                        </div>
+                        <div class="modal fade" id="modal__lento" tabindex="-1" role="dialog" aria-labelledby="modal-vamonos"
+                            aria-hidden="true">
+                            <div class="modal-dialog modal-lg" role="document">
+                    
+                            <!--Content-->
+                                <div class="modal-content">
+                                <!--Body-->
+                                <div class="modal-body mb-0 p-0">
+                                    <div class="embed-responsive embed-responsive-16by9 z-depth-1-half">
+                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7Y8jexya1cs"allowfullscreen ></iframe>
+                                    </div>
+                                </div>
+
+                                </div>
+                            <!--/.Content-->
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-12 col-md-6 col-lg-4 mb-5 video__carta">
+                        <div class="card  reproductor__inicio__img--estilos" >
                             <a href="" data-toggle="modal" data-target="#modal__manera" class="sin__senal__img--estilos d-flex justify-content-center align-items-center ">
                               <img src="multimedia/mi-manera-de-ser.jpg" class="w-100 videos__portada--estilos" alt="">
                               <i class="fas fa-play-circle btn-floating reproductor__inicio__boton__play videoclips__boton waves-effect waves-light fa-5x"></i>                             
