creacion de pagina fechas

--- a/musica.html
+++ b/musica.html
@@ -52,8 +52,8 @@
                   <a class="nav-link nav__items--estilos" href="videos.html">Videoclips</a>
               </li>
               <li class="nav-item mr-4">
-                  <a class="nav-link nav__items--estilos" href="noticias.html">Noticias</a>
-              </li>
+                <a class="nav-link nav__items--estilos" href="fechas.html">Fechas</a>
+            </li>
           </ul>  
           <ul class="navbar-nav itemsNav">
               <li class="nav-item ">
