--- a/videos.html
+++ b/videos.html
@@ -53,8 +53,8 @@
                   <a class="nav-link nav__items--estilos" href="videos.html">Videoclips</a>
               </li>
               <li class="nav-item mr-4">
-                  <a class="nav-link nav__items--estilos" href="noticias.html">Noticias</a>
-              </li>
+                <a class="nav-link nav__items--estilos" href="fechas.html">Fechas</a>
+            </li>
           </ul>  
           <ul class="navbar-nav itemsNav">
               <li class="nav-item ">
@@ -83,7 +83,7 @@
             <div class="separacion__arriba__sinseñal separacion__arriba__sinseñal--estilos"> 
                 <h1 class="subtitulo__pag__bandalos--estilos wow zoomIn">VIDEOCLIPS</h1>
             </div> 
-          </div>
+        </div>
 
 
         <section class="videoclips">
