--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <a class="nav-link nav__items--estilos" href="videos.html">Videoclips</a>
               </li>
               <li class="nav-item mr-4">
-                  <a class="nav-link nav__items--estilos" href="noticias.html">Noticias</a>
+                  <a class="nav-link nav__items--estilos" href="fechas.html">Fechas</a>
               </li>
           </ul>  
           <ul class="navbar-nav itemsNav">
