cambio de colores, ajuste de img noticias-home

--- a/bandalos.html
+++ b/bandalos.html
@@ -130,7 +130,7 @@
 
 
     <!-- Footer  -->
-    <footer class="page-footer font-small cyan darken-3">
+    <footer class="page-footer font-small  footer--estilo darken-3">
         <div class="separacion separacion__abajo--estilo"></div>
         <!-- Footer Elements -->
         <div class="container">
