--- a/fechas.html
+++ b/fechas.html
@@ -279,7 +279,7 @@
 
 
     <!-- Footer  -->
-    <footer class="page-footer font-small cyan darken-3">
+    <footer class="page-footer font-small  footer--estilo darken-3">
         
         <!-- Footer Elements -->
         <div class="container">
