--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           </div>
           <div class="data">
             <div class="content">
-              <h2 class="title"><a>Bandalos Chinos habla de su próximo disco</a></h2>
+              <h2 class="title"><a>Los Bandalos hablan de su próximo disco</a></h2>
  
               <p class="text">Bandalos Chinos grabó el sucesor de Bach en enero en Sonic Ranch, Texas, lanzó los..</p>
               <a href="https://www.lanacion.com.ar/espectaculos/bandalos-chinos-habla-su-proximo-disco-cuenta-nid2393581" target="blank" >
@@ -309,7 +309,7 @@
 
 
  <!-- Footer  -->
- <footer class="page-footer font-small cyan footer--estilo">
+ <footer class="page-footer font-small footer--estilo">
   <div class="separacion separacion__abajo--estilo">
     
   </div>
