--- a/videos.html
+++ b/videos.html
@@ -451,8 +451,8 @@
 
 
     <!-- Footer  -->
- <footer class="page-footer font-small cyan darken-3">
-
+ <footer class="page-footer font-small  footer--estilo darken-3">
+    <div class="separacion separacion__abajo--estilo"></div>
     <!-- Footer Elements -->
     <div class="container">
   
