ajuste de logo, img

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg navbar-light  nav__menu--color scrolling-navbar fixed-top ">
       <div class="container-lg">
           <h1 class="nav__logo">
-            <a class="nav__logo" href="index.html"><img src="multimedia/logo__nav.png" class="img-fluid animated zoomIn" alt=""></a>
+            <a class="nav__logo" href="index.html"><img src="multimedia/logo__chico__nav.png" class="img-fluid animated zoomIn" alt=""></a>
           </h1>
           <button class="navbar-toggler nav__boton" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon "></span>
@@ -157,7 +157,7 @@
 
 
     <!-- Carousel -->
-    <section class="seccion__carousel background__fixed">
+    <section class="seccion__carousel background__fixed ">
       <div class="container">
         
         <div class="row d-flex justify-content-center align-items-center">
@@ -202,7 +202,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-7 carousel__logo img-fluid w-100 " >
+            <div class="col-12 col-md-7 carousel__logo img-fluid w-100 mt-4" >
                 <img src="multimedia/bandalos__chinos--logo.png" alt="" class="">
             </div>
 
