--- a/musica.html
+++ b/musica.html
@@ -33,7 +33,7 @@
         <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light  nav__menu--color scrolling-navbar fixed-top ">
       <div class="container-lg">
-          <a class="nav__logo" href="index.html"><img src="multimedia/BC2.svg" class="img-fluid" alt=""></a>
+          <a class="nav__logo" href="index.html"><img src="multimedia/logo__chico__nav.png" class="img-fluid" alt=""></a>
           <button class="navbar-toggler nav__boton" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon "></span>
           </button>
