--- a/fechas.html
+++ b/fechas.html
@@ -301,32 +301,32 @@
 
       <!-- Footer  -->
       <footer class="page-footer font-small  footer--estilo darken-3 pt-4">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12 py-5">
-                <div class="mb-5 flex-center">
-                  <a href="https://www.facebook.com/BandalismoChino" target="blank" class="fb-ic">
-                    <i class="fab fa-facebook-f fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-facebook "> </i>
-                  </a>
-                  <a target="blank" href="https://twitter.com/BandalosChinos?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="tw-ic">
-                    <i class="fab fa-twitter fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-twitter"> </i>
-                  </a>
-                  <a target="blank" href="https://open.spotify.com/artist/0wn2qDKzeFlhjRUtJAwJjp?si=RTsozNs_So-4BKX26oyiYg" class="gplus-ic">
-                    <i  class="fab fa-spotify fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-spotify"> </i>
-                  </a>
-                  <a target="blank" href="https://www.instagram.com/bandaloschinos/" class="ins-ic">
-                    <i class="fab fa-instagram fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-instagram"> </i>
-                  </a>
-                  <a target="blank" href="https://www.youtube.com/channel/UC8MoOCwpZodLL9nDghJ7V1Q">
-                    <i class="fab fa-youtube fa-lg mr-md-5 fa-2x icono-footer icono-youtube" ></i>
-                  </a>
-                </div>
+            <div class="container">
+              <div class="row">
+                  <div class="col-md-12 py-5">
+                      <div class="mb-5 flex-center">
+                          <a href="https://www.facebook.com/BandalismoChino" target="blank" class="fb-ic">
+                          <i class="fab fa-facebook-f fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-facebook "> </i>
+                          </a>
+                          <a target="blank" href="https://twitter.com/BandalosChinos?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="tw-ic">
+                          <i class="fab fa-twitter fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-twitter"> </i>
+                          </a>
+                          <a target="blank" href="https://open.spotify.com/artist/0wn2qDKzeFlhjRUtJAwJjp?si=RTsozNs_So-4BKX26oyiYg" class="gplus-ic">
+                          <i  class="fab fa-spotify fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-spotify"> </i>
+                          </a>
+                          <a target="blank" href="https://www.instagram.com/bandaloschinos/" class="ins-ic">
+                          <i class="fab fa-instagram fa-lg  mr-md-5 mr-4 fa-2x icono-footer icono-instagram"> </i>
+                          </a>
+                          <a target="blank" href="https://www.youtube.com/channel/UC8MoOCwpZodLL9nDghJ7V1Q">
+                          <i class="fab fa-youtube fa-lg mr-md-5 fa-2x icono-footer icono-youtube" ></i>
+                          </a> 
+                      </div>
+                  </div>
               </div>
-            </div>
           </div>
 
-          <div id=footer class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a > Iván Cardoso</a>
+          <div id=footer class="footer-copyright text-center py-3">2020:
+              <a> Iván Cardoso</a>
           </div>
         
       </footer>
