--- a/musica.html
+++ b/musica.html
@@ -143,7 +143,7 @@
                       </div>
 
                       <!-- Card body -->
-                      <div id="collapse1" class="collapse " role="tabpanel" aria-labelledby="heading1"
+                      <div id="collapse1" class="collapse show" role="tabpanel" aria-labelledby="heading1"
                         data-parent="#accordionEx7">
                         <div class="card-body mb-1 musica__fondo__bach--color white-text">
                           <p>
