ajuste img portada III

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
     <!-- Navbar -->
     
-    <section class="portada background__fixed">
+    <section class="portada">
     </section>
   
     <div class="separacion__arriba__sinseñal">
