ajuste portada fechas - index

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row d-flex justify-content-center align-items-center">
 
           
-          <div class="col-12 col-md-5 d-flex sin__señal__texto">
+          <div class="col-12 col-lg-5 d-flex sin__señal__texto">
             <div class="sin__señal__titulo wow zoomIn">
               Escucha 
             </div>
@@ -101,7 +101,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-7 ">
+          <div class="col-12 col-lg-7 ">
             <div class="card  reproductor__inicio__img--estilos" >
               <a href="" data-toggle="modal" data-target="#modalYT" class="sin__senal__img--estilos d-flex justify-content-center align-items-center ">
                 <img src="multimedia/sin__señal--desktop.jpg" class="img-fluid w-100" alt="">
