ajuste img portada bandalos - fechas

--- a/fechas.html
+++ b/fechas.html
@@ -265,7 +265,7 @@
                 <p>
                   <span>Flow Fest</span>
                   //
-                  <span>CdM, México</span>
+                  <span>Ciudad de México, México</span>
                 </p>
               </div>
             </div>
