creacion nueva seccion pag bandalos, ajuste paddings

--- a/fechas.html
+++ b/fechas.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head lang="en">
+    <head lang="es">
         <title>Bandalos Chinos - Fechas</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -252,7 +252,7 @@
           </div>
 
           <div class="row">
-            <div class="col-12 col-lg-10 d-flex align-items-center mt-3 mb-4 pb-4">
+            <div class="col-12 col-lg-10 d-flex align-items-center mt-3  pb-4">
               <div class="fechas__dia">
                 <div class="fechas__dia__numero">
                   <h4>12</h4>
