--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -102,7 +102,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-lg-7 ">
+          <div class="col-12 col-lg-7 p-0">
             <div class="card  reproductor__inicio__img--estilos" >
               <a href="" data-toggle="modal" data-target="#modalYT" class="sin__senal__img--estilos d-flex justify-content-center align-items-center ">
                 <img src="multimedia/sin__señal--desktop.jpg" class="img-fluid w-100" alt="">
@@ -140,32 +140,32 @@
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-12 col-md-5 ">     
                 <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
-                      <div class="carousel-inner carousel-home data-interval="3000">
-                        <div class="carousel-item active " data-interval="3000" >
+                      <div class="carousel-inner carousel-home"  data-interval="3000" pause="false" > 
+                        <div class="carousel-item active " data-interval="3000" touch="true" pause="false">
                             <img src="multimedia/carousel-foto-1.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="">
                         </div>
-                        <div class="carousel-item " data-interval="3000" touch="true">
+                        <div class="carousel-item " data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-2.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item "data-interval="3000" touch="true">
+                        <div class="carousel-item "data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-3.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item "data-interval="3000" touch="true">
+                        <div class="carousel-item "data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-4.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item "data-interval="3000" touch="true">
+                        <div class="carousel-item "data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-6.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item "data-interval="3000" touch="true">
+                        <div class="carousel-item "data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-7.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item "data-interval="3000" touch="true">
+                        <div class="carousel-item "data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-8.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item "data-interval="3000" touch="true">
+                        <div class="carousel-item "data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-9.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
-                        <div class="carousel-item "data-interval="3000" touch="true">
+                        <div class="carousel-item "data-interval="3000" touch="true" pause="false">
                           <img src="multimedia/carousel-foto-10.jpg" class="img-fluid w-100 seccion__carousel--foto" alt="...">
                         </div>
                       </div>
