--- a/videos.html
+++ b/videos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head lang="en">
+    <head lang="es">
         <title>Bandalos Chinos - Videos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -153,7 +153,7 @@
                     <div class="col-12 col-md-6 col-lg-4 mb-5 video__carta">
                         <div class="card  reproductor__inicio__img--estilos" >
                             <a href="" data-toggle="modal" data-target="#modal__demasiado" class="sin__senal__img--estilos d-flex justify-content-center align-items-center ">
-                              <img src="multimedia/demasiado.jpg" class=" w-100 videos__portada--estilos" alt="">
+                              <img src="multimedia/demasiado.jpg" class=" w-100 videos__portada--estilos videos_portada--margenes" alt="">
                               <i class="fas fa-play-circle btn-floating reproductor__inicio__boton__play videoclips__boton waves-effect waves-light fa-5x"></i>                             
                               <h3 class="videoclips__titulo__video">Demasiado</h3>
                             </a>
@@ -236,7 +236,7 @@
                     <div class="col-12 col-md-6 col-lg-4 mb-5 video__carta">
                         <div class="card  reproductor__inicio__img--estilos" >
                             <a href="" data-toggle="modal" data-target="#modal__isla" class="sin__senal__img--estilos d-flex justify-content-center align-items-center ">
-                              <img src="multimedia/isla.jpg" class="w-100 videos__portada--estilos" alt="">
+                              <img src="multimedia/isla.jpg" class="w-100 videos__portada--estilos videos_portada--margenes" alt="">
                               <i class="fas fa-play-circle btn-floating reproductor__inicio__boton__play videoclips__boton waves-effect waves-light fa-5x"></i>                             
                               <h3 class="videoclips__titulo__video">Isla</h3>
                             </a>
@@ -262,7 +262,7 @@
                     <div class="col-12 col-md-6 col-lg-4 mb-5 video__carta">
                         <div class="card  reproductor__inicio__img--estilos" >
                             <a href="" data-toggle="modal" data-target="#modal__lento" class="sin__senal__img--estilos d-flex justify-content-center align-items-center ">
-                              <img src="multimedia/bailando-lento.jpg" class="w-100 videos__portada--estilos" alt="">
+                              <img src="multimedia/bailando-lento.jpg" class="w-100 videos__portada--estilos videos_portada--margenes" alt="">
                               <i class="fas fa-play-circle btn-floating reproductor__inicio__boton__play videoclips__boton waves-effect waves-light fa-5x"></i>                             
                               <h3 class="videoclips__titulo__video">Bailando Lentos</h3>
                             </a>
