--- a/musica.html
+++ b/musica.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html>
-    <head lang="en">
+    <head lang="es">
         <title>Bandalos Chinos - Música</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
