cambio de animacion pag bandalos

--- a/bandalos.html
+++ b/bandalos.html
@@ -91,9 +91,10 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--1">
                             <div class="subtitulo">
-                                <div class="bandalos__carta__subtitulo " ">
-                                    <h3>Goyo</h3>
-                                    <p class="wow bounceInUp">Voz y teclado</p>
+                                <div class="bandalos__carta__subtitulo" ">
+                                    <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Goyo</h3>
+                                    <h3 class="bandalos__subtitulo__desktop">Goyo</h3>
+                                    <p >Voz y teclado</p>
                                 </div>
                             </div>
                         </div>
@@ -102,8 +103,9 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--2">
                             <div class="bandalos__carta__subtitulo ">
-                                <h3>Iñaki</h3>
-                                <p class="wow bounceInUp">Guitarra</p>
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Iñaki</h3>
+                                <h3 class="bandalos__subtitulo__desktop">Iñaki</h3>
+                                <p >Guitarra</p>
                             </div>
                         </div>
                     </div>
@@ -111,8 +113,9 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--3">
                             <div class="bandalos__carta__subtitulo ">
-                                <h3>Lobo</h3>
-                                <p class="wow bounceInUp">Bajo</p>
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Lobo</h3>
+                                <h3 class="bandalos__subtitulo__desktop">Lobo</h3>
+                                 <p >Bajo</p>
                             </div>
                         </div>
                     </div>
@@ -120,17 +123,19 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--4">
                             <div class="bandalos__carta__subtitulo  ">
-                                <h3>Tomas</h3>
-                                <p class="wow bounceInUp">Guitarra</p>
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Tomas</h3>
+                                <h3 class="bandalos__subtitulo__desktop">Tomas</h3>
+                                <p >Guitarra</p>
                             </div>
                         </div>
                     </div>
     
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--5">
-                            <div class="bandalos__carta__subtitulo ">
-                                <h3>Chapi</h3>
-                                <p class="wow bounceInUp">Teclados</p>
+                            <div class="bandalos__carta__subtitulo">
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Chapi</h3>
+                                <h3 class="bandalos__subtitulo__desktop">Chapi</h3>
+                                <p >Teclados</p>
                             </div>
                         </div>
                     </div>
@@ -138,8 +143,9 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--7">
                             <div class="bandalos__carta__subtitulo ">
-                                <h3>Matias</h3>
-                                <p class="wow bounceInUp">Batería</p>
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Matias</h3>
+                                <h3 class="bandalos__subtitulo__desktop">Matias</h3>
+                                <p >Batería</p>
                             </div>
                         </div>
                     </div>
@@ -147,8 +153,9 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--6">
                             <div class="bandalos__carta__subtitulo ">
-                                <h3>Andy</h3>
-                                <p class="wow bounceInUp" >Saxofón</p>
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Andy</h3>
+                                <h3 class="bandalos__subtitulo__desktop">Andy</h3>
+                                <p  >Saxofón</p>
                             </div>
                         </div>
                     </div>
@@ -156,6 +163,8 @@
                     <div class="col-12 col-md-6 col-lg-8">
                         <div class="card bandalos__galeria__carta bandalos__galeria__carta--8">
                             <div class="bandalos__carta__subtitulo ">
+                                <h3 class="wow bounceInUp bandalos__subtitulo__mobile">Bandalos Chinos</h3>
+                                <h3 class="bandalos__subtitulo__desktop">La chinada</h3>
                             </div>
                         </div>
                     </div>
